# picoctf-2025

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  create_server_archive.sh  problem.md  problem2.md  test_circuits.sh
programs/: flag.asm  nand_checker.asm
server/: cpu.js  index.js  package.json  tests.js  utils.js
server/public/: index.html  styles.css
server/wasm/pkg/: package.json  verilog_ctf_wasm.d.ts  verilog_ctf_wasm.js  verilog_ctf_wasm_bg.wasm  verilog_ctf_wasm_bg.wasm.d.ts
src/: assembler.rs  error.rs  lib.rs  main.rs  simulator.rs  state.rs  tests.rs
verilog/: Dockerfile  auto.ys  auto.ysy  cpu.dot  cpu.json  cpu.v  output.json  synth_cpu.ys  test.blif  test.v  test2.v  tmp.json
verilog-macro/: Cargo.toml
verilog-macro/src/: lib.rs
