[package]
name = "verilog-ctf"
version = "0.1.0"
edition = "2021"

[dependencies]
verilog-macro = { path = "./verilog-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "assembler"
path = "src/bin/assembler.rs"
